# cmake_examples

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  gen_table.py  search.sh  tutorial.md  现代cmake.md
01_helloworld/: README.md
02_find_and_use_packages/benchmark_example/: CMakeLists.txt
02_find_and_use_packages/benchmark_example/compile-benchmark/: android-arm64-build.sh
02_find_and_use_packages/opencv_example/: CMakeLists.txt
04_files_and_directories/copy_directory_example/: CMakeLists.txt
05_sanitizers/: asan.cmake  tsan.cmake
06_sanitizers/: asan.cmake  tsan.cmake
0_helloworld/: README.md
10_vscode_debug_C++/: CMakeLists.txt  README.md
11_vscode_debug_C++/: .gitignore  README.md  a.c  a.out
13_debugging/: README.md
15_external_dependency/: README.md
16_cmake_debugging/: README.md
16_debug/: README.md
1_helloworld/: README.md
1_package_management/: README.md
2-common-configs/: README.md
2_build_intall_packages/: README.md
2_global_and_target_settings/: README.md
3_use_installed_packages/: README.md
4_post_processing/: README.md
4_testing_and_coverage/: README.md
5-build-hooks/: README.md
5-vscode-intergration/: README.md
5_documentation/: README.md
6-cmake-presets/: README.md
6-misc/: README.md  cmake_cheat_sheet.md  docs.md  refs.md
6_bindings/: REAME.md
7-write-tools/: README.md  artifacts.cmake  asan.cmake  cvbuild.cmake  debug_symbols.cmake  hwasan.cmake  ignore_no_pdb_warning.cmake  lldb-debug.cmake  msvc_dynamic_crt.cmake  msvc_exception_fh3.cmake  msvc_static_crt.cmake  output_dir2.cmake  summary.cmake
7_debugging/: README.md
9-best-practice/: README.md
9-cross-build/: README.md
address_sanitizer_example/: CMakeLists.txt  README.md
address_sanitizer_example/src/: char_array.c
arm-linux-gnueabihf_example/: CMakeLists.txt  arm-linux-gnueabihf-gcc.toolchain.cmake  readme.md
arm-none-eabi_example/: CMakeLists.txt  arm-none-eabi-gcc.toolchain.cmake
arm_android_example/: CMakeLists.txt
arm_asm_c_mix_example/: CMakeLists.txt  README.md  test.S  testbed.cpp
arm_neon_example/: CMakeLists.txt
arm_neon_example2/: CMakeLists.txt  README.md
arm_neon_example3/: .gitignore  README.md
benchmark_example/: README.md
c_call_python_example/: readme.md
clang_coverage_example/: CMakeLists.txt  foo.cc
cmake_build_type_example/: README.md
compile_flag_example1/: CMakeLists.txt  README.md  main.cpp
configure_file_example/: hello_config.h.in
copy_dll_example/: CMakeLists.txt  README.md
cpack_example/: README.md
create_dll_example1/: CMakeLists.txt
create_dll_example1/testbed/: demo.cpp
create_shared_lib_example/: get_seven.cpp  test.cpp
csharp_winform_example/: Form1.cs
csharp_wpf_example/: MainWindow.xaml
cuda_example/: CMakeLists.txt  deps.cmake
docs/: README.md  cmake_document_signature.md  effective_modern_cmake.md  generator_expression.md  misc.md  styles.md  subdirectory.md  tutorial.md
doctest_example/: .gitignore  CMakeLists.txt
download_example/: CMakeLists.txt  README.md  hello_nb.cpp
doxygen_coverage_example/: README.md
doxygen_coverage_example2/: README.md
doxygen_coverage_example3/: CMakeLists.txt  README.md
doxygen_example/: README.md
external_add_example/: sample1.h
find_package_examples/: CMakeLists.txt  gflags-example.cmake  glfw.cmake  leveldb-example.cmake  protobuf-example.cmake  readme.md  run_protoc.bat
find_package_examples/src/: gflags_example.cpp  glog_example.cpp
gcc_coverage_example/: hello.cpp
generator_example/: README.md  hello.cpp  setup-udev-and-adb-cheet-sheet.md
glob_example/: CMakeLists.txt  README.md
glob_example/src/: hello.cpp  hello.h  main.cpp
gtest_ctest_example/: CMakeLists.txt  README.md
gtest_ctest_example2/: README.md
gtest_example/: CMakeLists.txt
gtest_example2/: CMakeLists.txt  build-gtest-mtdll.cmd  testbed.cpp
gtest_example3/: CMakeLists.txt
header_only_library_example/: CMakeLists.txt  array.hpp  use_array.cpp
install_example2/: CMakeLists.txt  README.md  foo.cpp
install_example2/hello_project/: hello.h
install_example2/say_hello_project/: CMakeLists.txt  say_hello.cpp
install_example3/: CMakeLists.txt  README.md
install_example3/api/hello/: hello.hpp
install_find_package_example/: README.md
jni_example/: CMakeLists.txt  readme.md
libclang_example/: CMakeLists.txt  README.md  header.hpp  main.cpp
libclang_example/cmake-modules/: FindLibClang.cmake
mex_example/: CMakeLists.txt
modules/: FindZLIB.cmake  readme.md
ncnn_example/: CMakeLists.txt  readme.md
ncnn_example/asset/: yolo-fastest.param
ninja_colorful_output_example/: CMakeLists.txt  README.md  testbed.cpp
ohos_ndk_example/: CMakeLists.txt  build.gradle  detail.md
opencl_example/: matvec.c
opencv_example/: CMakeLists.txt
opengl_example/: CMakeLists.txt  README.md  snake.c
openmp_example/: CMakeLists.txt  README.md  readme.md
openmp_example/src/: a.out  main.cpp
openmp_example2/: CMakeLists.txt  README.md  predigest.cmake  testbed.cpp
openssl-example/: cacert.pem  private.key  privkey.pem  public.key  ssl-server.c
option_example/: CMakeLists.txt
option_example2/: testbed.cpp
options_via_txt_example/: CMakeLists.txt
proto_to_cpp_example/: README.md
pybind11_example1/: IPM.cpp  main.cpp  readme.md
qt_example/: CMakeLists.txt
rapidcheck_example/: README.md
rapidcheck_example2/: .gitignore  get_rapidcheck.sh
rtos-test/: arm-gcc-toolchain.cmake
simd_multiversion_example/: CMakeLists.txt  README.md  testbed.cpp
sleek/: sleek.cmake
sse_example/: readme.md
test_coverage_example/: README.md  testbed.cpp
test_coverage_example2/: ArabicToRomanNumeralConverter.cpp  ArabicToRomanNumeralConverter.hpp  CMakeLists.txt
testbed/: CMakeLists.txt
testbed2/: CMakeLists.txt
testbed2/modules/: FindZLIB.cmake
testbed2/src/: demo.cpp
testbed3/: CMakeLists.txt
testbed3/src/: demo.cpp
testbed4/: CMakeLists.txt
testbed6/: CMakeLists.txt
tools/: QueryCodePage.py  (+28 more)
vulkan_example/: CMakeLists.txt
vulkan_example1/: CMakeLists.txt  readme.md
vulkan_example1/src/: main.cpp
(+1052 files in other folders)
